# kaggle-mcp

./: LICENSE  README.md  README.zh-CN.md  pyproject.toml
assets/: architecture.excalidraw
src/kaggle_mcp/: __init__.py  benchmarks.py  client.py  competitions.py  datasets.py  discussions.py  kernels.py  models.py  server.py
